Creada la funcionalidad de eliminar juego
